fix:(banner gap etc)

--- a/dev/scss/sections/home-hero-v2.out.scss
+++ b/dev/scss/sections/home-hero-v2.out.scss
@@ -2,6 +2,8 @@
 
 .home-hero-v2 {
     position: relative;
+    display: flex;
+    justify-content: center;
     &::before {
         content: "";
         position: absolute;
@@ -47,23 +49,49 @@
         justify-content: space-between;
         align-items: end;
         padding-bottom: 115px !important;
-        gap: 30px;
+        gap: 116px;
+        @media (max-width: 1440px) {
+            gap: 82px;
+            padding-bottom: 40px !important;
+            padding-left: 50px !important;
+            padding-right: 50px !important;
+            margin-left: 0;
+            margin-right: 0;
+            min-width: 100%;
+        }
         @include media-breakpoint-down(lg) {
             flex-direction: column;
             justify-content: end;
+            align-items: baseline;
         }
         @include media-breakpoint-down(md) {
             min-height: 600px;
             height: 100svh;
         }
+        @media (max-width: 989px) {
+            gap: 28px;
+        }
+        @media (max-width: 459px) {
+            padding-bottom: 51px !important;
+            padding-left: 16px !important;
+            padding-right: 16px !important;
+        }
         h1 {
             text-align: left;
             color: $c-gray;
-            max-width: 855px;
+            max-width: 704px;
             margin-top: 0;
-            margin-bottom: 24px;
+            margin-bottom: 0;
             font-size: 88px !important;
-            @include media-breakpoint-down(xl) {
+            @media (max-width: 1132px) {
+                font-size: 67px !important;
+                line-height: 84px;
+            }
+            @media (max-width: 989px) {
+                font-size: 48px !important;
+                line-height: 48px;
+            }
+            @media (max-width: 595px) {
                 font-size: 48px !important;
                 line-height: 48px;
             }
@@ -75,9 +103,10 @@
         p {
             color: $c-gray;
             text-align: left;
-            max-width: 1140px;
+            max-width: 554px;
             margin-top: 0;
-            margin-bottom: 24px;
+            margin-bottom: 16px;
+            margin-top: 16px;
             @include media-breakpoint-down(xl) {
                 font-size: 20px !important;
                 line-height: 24px;
@@ -88,9 +117,12 @@
         }
     }
     &__button {
+        margin-bottom: 45px;
+        @media (max-width: 430px) {
+            margin-bottom: 0;
+        }
         @include media-breakpoint-down(sm) {
             width: 100%;
-            padding: 0 10px;
         }
         a {
             @include media-breakpoint-down(sm) {
@@ -100,7 +132,7 @@
         .btn__animated {
             border: 1px solid #f6f4ed;
             color: #F6F4ED;
-            padding: 20px 81.5px;
+            padding: 20px 20px;
             border-radius: 4px;
             font-size: 15px;
             line-height: 18.5px;
@@ -111,6 +143,10 @@
             gap: 10px;
             justify-content: center;
             text-decoration: none;
+            width: 311px;
+            @media (max-width: 430px) {
+                width: 100%;
+            }
             svg {
                 display: none;
                 width: 0;
